--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baap Er Bank</title>
+    <title>Functional Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="tailwind.config.js">
     <script>
@@ -24,7 +24,7 @@
 <body>
     <header>
         <h1 class="text-center mt-16 text-5xl">Welcom to my <span
-                class="font-semibold text-green-600">Baap-er-Bank</span>!!!
+                class="font-semibold text-green-600">Functional-Bank</span>!!!
         </h1>
     </header>
     <main>
